# wasserwege

./: .gitignore  .pre-commit-config.yaml  .sqlfluffignore  README.md  benchmark.py  demo.cast  prepare_german_waterways.py  prepare_waterways_data.py  pyproject.toml  server.py  setup.py
benchmark_logs/: benchmark_1746881491.json
quelle/: .user.yml  dbt_project.yml  profiles.yml
quelle/models/: schema.yml  sources.yml  waterways.sql
quelle/models/example/: my_second_dbt_model.sql
test_data/gpx/: 2025-05-09_2228465740_Radfahren.gpx  Consistent_Shredibility_.gpx  Easter_eggs_and_holy_shreds_.gpx  I_d_lose_my_shred_if_it_wasn_t_screwed_on_.gpx  Sauna_Schwitzen_und_Shredden_.gpx  Shredded_legs_.gpx  The_History_of_the_Shrednaissance_World_.gpx  The_Shredligeri_rulers_of_Verona_.gpx  The_Tragedy_of_Romeo_and_Juliet_by_William_Shredspeare_Play_by_William_Shakespeare.gpx
