[project]
name = "wasserwege"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.9.3",
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "gpxpy>=1.6.2",
    "pyarrow>=20.0.0",
    "requests>=2.32.3",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = ["pyarrow-stubs>=19.3", "ruff>=0.11.9"]
